@@ -150,7 +150,7 @@ $Mj::Config::default_string = q(
  'file_search'          => [':$LANG', ':'],
  'file_share'           => [],
  'filedir'              => undef,
- 'default_lists_format' => 'compact',
+ 'default_lists_format' => 'short',
  'description_max_lines'=> 0,
  'confirm_url'          => 'no server configured',
  'dup_lifetime'         => 28,
